--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
     font-size: 1.6rem;
     line-height: 2;
 }
-/**Globales**/
+/** Globales **/
 .contenedor{
     max-width: 120rem;
     width: 90%;
@@ -45,4 +45,58 @@ h4{
 }
 img{
     max-width: 100%;
+}
+/** Utilidades **/
+.no-margin{
+    margin: 0;
+}
+.no-padding{
+    padding: 0;
+}
+.centrar-texto{
+    text-align: center;
+}
+/** Header **/
+.header{
+    background-image: url(../img/banner.jpg);
+    height: 60rem;
+    background-size: cover; /**El cover es par que tome todo el espacio disponible**/
+    background-repeat: no-repeat; /**El no-repeat es para que no se repita la imagen**/
+    background-position: center center; /** es par centrar la imagen y se pone doble center, porque es un center(horizontal) y un center(vertical )**/
+}
+.header__texto{
+    text-align: center;
+    color: var(--blanco);
+    margin-top: 5rem;
+}
+@media (min-width: 768px){
+    .header__texto{
+        margin-top: 15rem;
+    }
+    .barra{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}  
+}
+.logo{
+    color: var(--blanco);
+}
+.logo__nombre{
+    font-weight: 400;
+}
+.logo__bold{
+    font-weight: 700;
+}
+@media (min-width: 768px){
+    .navegacion{
+        display: flex;
+        gap: 2rem;
+    }
+}
+.navegacion__enlace{
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
 }
