trabajando el main

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --fuenteHeading: 'PT Sans', sans-serif;
     --fuenteParrafos: 'Open Sans', sans-serif;
     --primario: #784d3c;
+    --gris: #e1e1e1;
     --blanco: #ffffff;
     --negro: #000000;
 }
@@ -99,4 +100,40 @@ img{
     text-align: center;
     font-size: 1.8rem;
     color: var(--blanco);
+}
+@media (min-width: 768px){
+    .contenido-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+}
+.entrada{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+.entrada:last-of-type{ /**seleciona el ultimo hijo de un bloque padre**/
+    border: none;
+    margin-bottom: 0;
+}
+.boton{
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+
+}
+@media (min-width: 768px){
+    .boton{
+        display: inline-block;
+    }
+}
+
+.boton-primario{
+    background-color: var(--negro);
 }
