--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,13 @@ img{
     text-align: center;
 }
 /** Header **/
+.webp, .header{
+    background-image: url(../img/banner.webp);
+}
+.no-webp, .header{
+    background-image: url(../img/banner.jpg); 
+}
 .header{
-    background-image: url(../img/banner.jpg);
     height: 60rem;
     background-size: cover; /**El cover es par que tome todo el espacio disponible**/
     background-repeat: no-repeat; /**El no-repeat es para que no se repita la imagen**/
